tests/assets/pkg/Download1/gold/fail.gold
exec main.toit
Exit Code: 1
<TEST>/package.lock:7:10: error: Package '<TEST>/bar_git-2.0.1' not found
    url: <TEST>/bar_git
         ^~
<TEST>/package.lock:13:10: error: Package '<TEST>/foo_git-1.2.3' not found
    url: <TEST>/foo_git
         ^~
main.toit:1:8: error: Package 'foo_git' for prefix 'foo' not found
import foo
       ^~
main.toit:2:8: error: Package 'bar_git' for prefix 'bar' not found
import bar
       ^~
main.toit:6:7: error: Unresolved identifier: 'say_hello'
  foo.say_hello
      ^~
main.toit:7:7: error: Unresolved identifier: 'say_hello'
  bar.say_hello
      ^~
Compilation failed.
